# WindowsHello

./: README.md
windows_hello_client/: Cargo.toml
windows_hello_client/src/: hello.rs  main.rs  network.rs  types.rs
windows_hello_public/: Cargo.toml
windows_hello_public/src/: main.rs  server.rs
windows_hello_server/: Cargo.toml  ex.sh
windows_hello_server/src/: auth.rs  handlers.rs  main.rs  types.rs
