[package]
name = "windows_hello_client"
version = "0.1.0"
edition = "2021"


[dependencies]

# Windows Hello Core
windows = { version = "0.62", features = [
  "Security_Credentials",
  "Security_Cryptography",       # ← CryptographicBuffer
  "Security_Cryptography_Core",  # ← CryptographicPublicKeyBlobType
  "Storage_Streams",             # ← DataReader
  "Foundation",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Verify
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
spki = "0.7" 

# Network
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.21" # 최신 안정 버전으로 추가