[package]
name = "hello_keycred_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62", features = [
  "Security_Credentials",
  "Security_Cryptography",       # ← CryptographicBuffer
  "Security_Cryptography_Core",  # ← CryptographicPublicKeyBlobType
  "Storage_Streams",             # ← DataReader
  "Foundation",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }