[package]
name = "windows_hello_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
time = { version = "0.3", features = ["macros","formatting"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

spki = "0.7"
der = "0.7"
pkcs8 = "0.10"

p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["der"] }  # ECDSA DER 시그니처
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }