[package]
name = "windows_hello_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8" # 챌린지 생성을 위한 난수
base64 = { version = "0.21", features = ["std"] } # Base64 처리

# 서명 검증을 위한 암호화 라이브러리 (클라이언트와 동일)
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }