[package]
name = "windows_hello_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = { version = "0.21", features = ["std"] } # Base64 처리

# For verifying sign
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }

# Parsing x509 cert
x509-parser = "0.15" 